--- a/FakeDOORS/FakeDOORS.csproj
+++ b/FakeDOORS/FakeDOORS.csproj
@@ -4,6 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>image.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
